--- a/GoIT/test/EXAM/src/styles/partials/font.css
+++ b/GoIT/test/EXAM/src/styles/partials/font.css
@@ -1,11 +1,20 @@
 @font-face {
     font-family: 'Montserrat-Bold';
-    src: url('../fonts/Montserrat-Bold.eot?#iefix') format('embedded-opentype'),
-         url('../fonts/Montserrat-Bold.ttf') format('truetype');
+    src: url('../fonts/Montserrat-Bold.ttf') format('truetype');
+}
+
+@font-face {
+    font-family: 'Montserrat-Bold-ie8';
+    src: url('../fonts/Montserrat-Bold.eot?#iefix') format('embedded-opentype');
 }
 
 @font-face {
     font-family: 'Roboto-Light';
-    src: url('../fonts/Roboto-Light.eot?#iefix') format('embedded-opentype'),
-         url('../fonts/Roboto-Light.ttf') format('truetype');
+    src: url('../fonts/Roboto-Light.ttf') format('truetype');
+         
+}
+
+@font-face {
+    font-family: 'Roboto-Light-ie8';
+    src: url('../fonts/Roboto-Light.eot?#iefix') format('embedded-opentype');
 }
