--- a/GoIT/test/EXAM/src/styles/partials/style.css
+++ b/GoIT/test/EXAM/src/styles/partials/style.css
@@ -47,7 +47,7 @@ header {
   margin-top: 20px;
   width: 75px;
   height: 32px;
-  font-family: "Montserrat-Bold";
+  font-family: "Montserrat-Bold", "Montserrat-Bold-ie8";
   text-decoration: none;
   font-size: 14px;
   color: white;
@@ -75,7 +75,7 @@ header {
   width: 180px;
   margin: 0 auto;
   margin-top: 118px;
-  font-family: "Montserrat-Bold";
+  font-family: "Montserrat-Bold", "Montserrat-Bold-ie8";
   color: white;
   font-size: 20px;
   letter-spacing: 1px; }
@@ -86,7 +86,7 @@ header {
   line-height: 35px;
   letter-spacing: 1.5px;
   text-align: center;
-  font-family: "Montserrat-Bold";
+  font-family: "Montserrat-Bold", "Montserrat-Bold-ie8";
   color: white; }
 
 .header__caption__3 {
@@ -96,7 +96,7 @@ header {
   margin: 0 auto;
   margin-top: 10px;
   font-size: 18px;
-  font-family: "Roboto-Light";
+  font-family: "Roboto-Light", "Roboto-Light-ie8";
   line-height: 20px; }
 
 .find__link {
@@ -109,7 +109,7 @@ header {
   line-height: 40px;
   text-decoration: none;
   color: white;
-  font-family: "Montserrat-Bold";
+  font-family: "Montserrat-Bold", "Montserrat-Bold-ie8";
   font-size: 13px;
   /* Для хороших браузеров */
   -moz-border-radius: 20px;
@@ -130,7 +130,7 @@ header {
   width: 90%;
   margin: 0 auto;
   margin-top: 35px;
-  font-family: "Montserrat-Bold";
+  font-family: "Montserrat-Bold", "Montserrat-Bold-ie8";
   font-size: 22px;
   line-height: 26px;
   text-align: center;
@@ -217,7 +217,7 @@ header {
   margin-top: 16px;
   margin-left: 7%;
   font-size: 24px;
-  font-family: "Montserrat-Bold";
+  font-family: "Montserrat-Bold", "Montserrat-Bold-ie8";
   color: white;
   line-height: 28px; }
 
@@ -226,7 +226,7 @@ header {
   margin-top: 12px;
   margin-left: 7%;
   color: white;
-  font-family: "Roboto-Light";
+  font-family: "Roboto-Light", "Roboto-Light-ie8";
   font-size: 14px;
   line-height: 17px; }
 
@@ -257,7 +257,7 @@ header {
   text-decoration: none;
   color: black;
   font-size: 14px;
-  font-family: "Montserrat-Bold"; }
+  font-family: "Montserrat-Bold", "Montserrat-Bold-ie8"; }
 
 .parthner__feedback {
   width: 220px;
@@ -265,7 +265,7 @@ header {
   margin-top: 16px;
   font-size: 14px;
   line-height: 16px;
-  font-family: "Roboto-Light";
+  font-family: "Roboto-Light", "Roboto-Light-ie8";
   text-align: center;
   color: #989898; }
 
@@ -300,7 +300,7 @@ header {
   border: 2px solid #ff4e50;
   border-radius: 20px;
   behavior: url(PIE/PIE.htc);
-  font-family: "Montserrat-Bold";
+  font-family: "Montserrat-Bold", "Montserrat-Bold-ie8";
   font-size: 14px;
   letter-spacing: -0.5px;
   text-decoration: none;
@@ -342,7 +342,7 @@ header {
   margin: 0 auto;
   margin-top: 12px;
   text-align: center;
-  font-family: "Roboto-Light";
+  font-family: "Roboto-Light", "Roboto-Light-ie8";
   font-size: 18px; }
 
 .holiday__input__text {
@@ -354,7 +354,7 @@ header {
   border-radius: 5px;
   border: 1px solid #dcdcdc;
   padding-left: 15px;
-  font-family: "Roboto-Light";
+  font-family: "Roboto-Light", "Roboto-Light-ie8";
   font-size: 14px; }
 
 .find__link--2 {
@@ -369,14 +369,14 @@ footer {
   margin-top: 18px;
   text-align: center;
   font-size: 16px;
-  font-family: "Montserrat-Bold";
+  font-family: "Montserrat-Bold", "Montserrat-Bold-ie8";
   color: #ff4e50;
   letter-spacing: 1px; }
 
 .menu__caption {
   margin-top: 15px;
   text-align: center;
-  font-family: "Montserrat-Bold";
+  font-family: "Montserrat-Bold", "Montserrat-Bold-ie8";
   font-size: 14px; }
 
 .menu {
@@ -392,7 +392,7 @@ footer {
 
 .menu__link {
   text-decoration: none;
-  font-family: "Roboto-Light";
+  font-family: "Roboto-Light", "Roboto-Light-ie8";
   font-size: 14px;
   color: #989898; }
   .menu__link:hover {
@@ -400,7 +400,7 @@ footer {
 
 .designed {
   margin-top: 16px;
-  font-family: "Montserrat-Bold";
+  font-family: "Montserrat-Bold", "Montserrat-Bold-ie8";
   font-size: 10px;
   text-align: center;
   letter-spacing: 1px;
