--- a/GoIT/test/EXAM/src/styles/partials/style.scss
+++ b/GoIT/test/EXAM/src/styles/partials/style.scss
@@ -30,7 +30,7 @@ header {
   width: 100%;
   height: 540px;  
   margin: 0 auto;
-  /*background-image: url(../img/header_background.jpg);*/
+  background-image: url(../img/header_background.jpg);
   background-position: center;   
   z-index: -1;
 }
@@ -70,7 +70,7 @@ header {
   -khtml-border-radius: 20px; /* KHTML */
   border-radius: 20px; /* CSS3 */
   /* Для плохих IE */
-  behavior: url(PIE/PIE.htc); /* учим IE border-radius */
+  behavior: url(PIE/PIE.htc);/* учим IE border-radius */
 }
 .header__caption {
   width: 180px;
