--- a/GoIT/test/EXAM/src/styles/partials/style.scss
+++ b/GoIT/test/EXAM/src/styles/partials/style.scss
@@ -19,6 +19,9 @@ $robLigt-ie8:  'Roboto-Light-ie8';
 .clear__both{
   clear: both;
 }
+body{
+  z-index: -2;
+}
 /*MOBILE*/
 .header__wrapper {
   width: 100%;
