--- a/GoIT/test/EXAM/src/styles/partials/style.css
+++ b/GoIT/test/EXAM/src/styles/partials/style.css
@@ -25,8 +25,7 @@ header {
   height: 540px;
   margin: 0 auto;
   background-image: url(../img/header_background.jpg);
-  background-position: center;
-  z-index: 0; }
+  background-position: center; }
 
 .header__background {
   position: relative;
@@ -34,8 +33,7 @@ header {
   height: 540px;
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=#33000000,endColorstr=#33000000);
   /*ie8+*/
-  background-color: rgba(0, 0, 0, 0.2);
-  z-index: 0; }
+  background-color: rgba(0, 0, 0, 0.2); }
 
 .log {
   position: relative;
