--- a/GoIT/test/EXAM/src/styles/partials/style.css
+++ b/GoIT/test/EXAM/src/styles/partials/style.css
@@ -24,7 +24,7 @@ header {
   width: 100%;
   height: 540px;
   margin: 0 auto;
-  background-image: url(../img/header_background.jpg);
+  /*background-image: url(../img/header_background.jpg);*/
   background-position: center; }
 
 .header__background {
@@ -170,8 +170,7 @@ header {
   height: 240px;
   background-image: url(../img/step_1.jpg);
   background-position: center;
-  border-radius: 5px;
-  z-index: -1; }
+  border-radius: 5px; }
 
 .step--2 {
   background-image: url(../img/step_2.jpg); }
