--- a/GoIT/test/EXAM/src/styles/partials/style.scss
+++ b/GoIT/test/EXAM/src/styles/partials/style.scss
@@ -31,7 +31,7 @@ header {
   width: 100%;
   height: 540px;  
   margin: 0 auto;
-  background-image: url(../img/header_background.jpg);
+  /*background-image: url(../img/header_background.jpg);*/
   background-position: center;   
 }
 .header__background {
@@ -168,7 +168,6 @@ header {
   background-image: url(../img/step_1.jpg);
   background-position: center;
   border-radius: 5px;
-  z-index: -1;
 }
 .step--2{  
   background-image: url(../img/step_2.jpg);
