--- a/GoIT/test/EXAM/src/styles/style.main.css
+++ b/GoIT/test/EXAM/src/styles/style.main.css
@@ -184,7 +184,7 @@ header {
   width: 100%;
   height: 540px;
   margin: 0 auto;
-  background-image: url("../img/header_background.jpg");
+  /*background-image: url(../img/header_background.jpg);*/
   background-position: center;
 }
 
@@ -349,7 +349,6 @@ header {
   background-image: url("../img/step_1.jpg");
   background-position: center;
   border-radius: 5px;
-  z-index: -1;
 }
 
 .step--2 {
