--- a/GoIT/test/EXAM/src/styles/partials/style.css
+++ b/GoIT/test/EXAM/src/styles/partials/style.css
@@ -190,8 +190,7 @@ header {
   background: -ms-linear-gradient(top, rgba(48, 48, 48, 0.13) 0%, rgba(48, 48, 48, 0.13) 0%, rgba(13, 12, 13, 0.7) 100%);
   background: linear-gradient(to bottom, rgba(48, 48, 48, 0.13) 0%, rgba(48, 48, 48, 0.13) 0%, rgba(13, 12, 13, 0.7) 100%);
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=#21303030,endColorstr=#B20D0C0D);
-  border-radius: 5px;
-  z-index: -1; }
+  border-radius: 5px; }
 
 .step__link {
   display: block;
@@ -317,7 +316,8 @@ header {
   width: 300px;
   margin: 0 auto;
   margin-top: 10px;
-  border-radius: 5px; }
+  border-radius: 5px;
+  behavior: url(PIE/PIE.htc); }
   .masonry__item:first-child {
     position: relative;
     margin-top: 14px; }
@@ -325,7 +325,8 @@ header {
 .masonry__image {
   width: 100%;
   height: 100%;
-  border-radius: 5px; }
+  border-radius: 5px;
+  behavior: url(PIE/PIE.htc); }
 
 .title--image {
   position: absolute;
