--- a/GoIT/test/EXAM/src/styles/partials/style.scss
+++ b/GoIT/test/EXAM/src/styles/partials/style.scss
@@ -188,7 +188,6 @@ header {
   background: linear-gradient(to bottom, rgba(48,48,48,0.13) 0%, rgba(48,48,48,0.13) 0%, rgba(13,12,13,0.7) 100%);
   filter:progid:DXImageTransform.Microsoft.gradient(startColorstr=#21303030,endColorstr=#B20D0C0D);
   border-radius: 5px;
-  z-index: -1;
 }
 .step__link {
   display: block;
@@ -314,7 +313,7 @@ header {
   margin: 0 auto;
   margin-top: 10px;
   border-radius: 5px;
-
+  behavior: url(PIE/PIE.htc);
   &:first-child {
     position: relative;
     margin-top: 14px;
@@ -324,7 +323,7 @@ header {
   width: 100%;
   height: 100%;
   border-radius: 5px;
-
+  behavior: url(PIE/PIE.htc);
 }
 .title--image{
   position: absolute;
@@ -460,7 +459,6 @@ header {
     float: left;
     height: 400px;
     max-width: 235px;
-
 }
 .jcarousel__wrap{
     float: left;
