--- a/GoIT/test/EXAM/src/styles/style.main.css
+++ b/GoIT/test/EXAM/src/styles/style.main.css
@@ -376,7 +376,6 @@ header {
   background: linear-gradient(to bottom, rgba(48, 48, 48, 0.13) 0%, rgba(48, 48, 48, 0.13) 0%, rgba(13, 12, 13, 0.7) 100%);
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=#21303030,endColorstr=#B20D0C0D);
   border-radius: 5px;
-  z-index: -1;
 }
 
 .step__link {
@@ -521,6 +520,7 @@ header {
   margin: 0 auto;
   margin-top: 10px;
   border-radius: 5px;
+  behavior: url("PIE/PIE.htc");
 }
 
 .masonry__item:first-child {
@@ -532,6 +532,7 @@ header {
   width: 100%;
   height: 100%;
   border-radius: 5px;
+  behavior: url("PIE/PIE.htc");
 }
 
 .title--image {
