--- a/GoIT/test/EXAM/src/styles/partials/style.scss
+++ b/GoIT/test/EXAM/src/styles/partials/style.scss
@@ -69,7 +69,7 @@ header {
   border-radius: 20px; /* CSS3 */
   behavior: url(PIE/PIE.htc);/* учим IE border-radius */
 }
-.header__caption {
+h1 {
   width: 180px;
   margin: 0 auto;
   margin-top: 118px;
@@ -78,7 +78,7 @@ header {
   font-size: 20px;
   letter-spacing: 1px;
 }
-.header__caption__2{  
+h2 {  
   margin-top: 30px;
   font-size: 28px;
   line-height: 35px;
@@ -87,7 +87,7 @@ header {
   font-family: $montBold, $montBold-ie8;
   color: white;
 }
-.header__caption__3{
+h3 {
   text-align: center;  
   color: white;    
   width: 70%;
@@ -421,11 +421,11 @@ header {
   margin-right: 4%;
   margin-top: 18px;
 }
-.header__caption{
+h1 {
   margin-top: 48px;
   margin-left: 6%;
 }
-.header__caption__2{
+h2 {
   width: 66%;
   margin: 0 auto;
   margin-top: 148px;
@@ -433,7 +433,7 @@ header {
   line-height: 62px;
   letter-spacing: 0px;
 }
-.header__caption__3{
+h3 {
   margin-top: 28px;
   font-size: 24px;
 }
@@ -642,17 +642,17 @@ header {
   margin-right: 0%;
   margin-top: 16px;
 }
-.header__caption{
+h1 {
   margin-top: 46px;
   margin-left: 2.5%;
   letter-spacing: 0;
 }
-.header__caption__2{
+h2 {
   width: 60%;
   margin-top: 137px;
   letter-spacing: -1px;
 }
-.header__caption__3{
+h3 {
   margin-top: 22px;
   letter-spacing: -0.8px;
 }
