--- a/GoIT/test/EXAM/src/styles/style.main.css
+++ b/GoIT/test/EXAM/src/styles/style.main.css
@@ -236,7 +236,7 @@ header {
   /* учим IE border-radius */
 }
 
-.header__caption {
+h1 {
   width: 180px;
   margin: 0 auto;
   margin-top: 118px;
@@ -246,7 +246,7 @@ header {
   letter-spacing: 1px;
 }
 
-.header__caption__2 {
+h2 {
   margin-top: 30px;
   font-size: 28px;
   line-height: 35px;
@@ -256,7 +256,7 @@ header {
   color: white;
 }
 
-.header__caption__3 {
+h3 {
   text-align: center;
   color: white;
   width: 70%;
@@ -648,12 +648,12 @@ footer {
     margin-top: 18px;
   }
 
-  .header__caption {
+  h1 {
     margin-top: 48px;
     margin-left: 6%;
   }
 
-  .header__caption__2 {
+  h2 {
     width: 66%;
     margin: 0 auto;
     margin-top: 148px;
@@ -662,7 +662,7 @@ footer {
     letter-spacing: 0px;
   }
 
-  .header__caption__3 {
+  h3 {
     margin-top: 28px;
     font-size: 24px;
   }
@@ -920,19 +920,19 @@ footer {
     margin-top: 16px;
   }
 
-  .header__caption {
+  h1 {
     margin-top: 46px;
     margin-left: 2.5%;
     letter-spacing: 0;
   }
 
-  .header__caption__2 {
+  h2 {
     width: 60%;
     margin-top: 137px;
     letter-spacing: -1px;
   }
 
-  .header__caption__3 {
+  h3 {
     margin-top: 22px;
     letter-spacing: -0.8px;
   }
