--- a/GoIT/javascript/EXAM/src/styles/partials/style.scss
+++ b/GoIT/javascript/EXAM/src/styles/partials/style.scss
@@ -1,5 +1,7 @@
-$montBold: 'Montserrat-Bold';
-$robLigt:  'Roboto-Light';
+$montBold:     'Montserrat-Bold';
+$robLigt:      'Roboto-Light';
+$montBold-ie8: 'Montserrat-Bold-ie8';
+$robLigt-ie8:  'Roboto-Light-ie8';
 
 /*CLEARFIX*/
 .clearfix{
@@ -17,6 +19,7 @@ $robLigt:  'Roboto-Light';
 .clear__both{
   clear: both;
 }
+
 /*MOBILE*/
 .header__wrapper {
   width: 100%;
@@ -24,18 +27,22 @@ $robLigt:  'Roboto-Light';
   margin: 0 auto;
 }
 header {
+  position: relative;
   width: 100%;
   height: 540px;  
   margin: 0 auto;
-  background-position: center;   
   background-image: url(../img/header_background.jpg);
+  background-position: center;   
 }
 .header__background {
+  position: relative;
   width: 100%;
   height: 540px;
-  background-color: rgba(0, 0, 0, 0.2);  
+  filter:progid:DXImageTransform.Microsoft.gradient(startColorstr=#33000000,endColorstr=#33000000); /*ie8+*/
+  background-color: rgba(0, 0, 0, 0.2);
 }
 .log{
+  position: relative;
   width: 190px ;
   margin: 0 auto;
 }
@@ -44,7 +51,7 @@ header {
   margin-top: 20px;
   width: 75px;
   height: 32px;
-  font-family: $montBold;
+  font-family: $montBold, $montBold-ie8;
   text-decoration: none;
   font-size: 14px;
   color: white;
@@ -56,34 +63,38 @@ header {
   margin-left: 0.5%;
   width: 85px;
   border: 2px solid white;
-  border-radius: 20px; 
+  -moz-border-radius: 20px; /* Firefox */
+  -webkit-border-radius: 20px; /* Safari, Chrome */
+  -khtml-border-radius: 20px; /* KHTML */
+  border-radius: 20px; /* CSS3 */
+  behavior: url(PIE/PIE.htc);/* учим IE border-radius */
 }
-.header__caption {
+h1 {
   width: 180px;
   margin: 0 auto;
   margin-top: 118px;
-  font-family: $montBold;
+  font-family: $montBold, $montBold-ie8;
   color: white;
   font-size: 20px;
   letter-spacing: 1px;
 }
-.header__caption__2{  
+h2 {  
   margin-top: 30px;
   font-size: 28px;
   line-height: 35px;
   letter-spacing: 1.5px;
   text-align: center;
-  font-family: $montBold;
+  font-family: $montBold, $montBold-ie8;
   color: white;
 }
-.header__caption__3{
+h3 {
   text-align: center;  
   color: white;    
   width: 70%;
   margin: 0 auto;
   margin-top: 10px;
   font-size: 18px;
-  font-family: $robLigt;  
+  font-family: $robLigt, $robLigt-ie8;  
   line-height: 20px;
 }
 .find__link{
@@ -94,20 +105,23 @@ header {
   margin-top: 18px;
   text-align: center;
   line-height: 40px;
-  background-color: #ff4e50;
   text-decoration: none;
   color: white;
-  font-family: $montBold; 
+  font-family: $montBold, $montBold-ie8; 
   font-size: 13px;
-  border-radius: 20px;
+  -moz-border-radius: 20px; /* Firefox */
+  -webkit-border-radius: 20px; /* Safari, Chrome */
+  -khtml-border-radius: 20px; /* KHTML */
+  border-radius: 20px; /* CSS3 */
+  behavior: url(PIE/PIE.htc); /* учим IE border-radius */
   letter-spacing: 0.5px;
-  border: none; 
+  background-color: #ff4e50;
 }
 .title{
   width: 90%;
   margin: 0 auto;
   margin-top: 35px;
-  font-family: $montBold;
+  font-family: $montBold, $montBold-ie8;
   font-size: 22px;
   line-height: 26px;
   text-align: center;
@@ -126,7 +140,6 @@ header {
     float: left;
     height: 240px;
     max-width: 300px;
-
 }
 .jcarousel__wrap{
     margin: 0 auto;
@@ -145,12 +158,12 @@ header {
   display: none;
 }
 .step{
+  position: relative;
   width: 300px;
   height: 240px;
   background-image: url(../img/step_1.jpg);
   background-position: center;
   border-radius: 5px;
-
 }
 .step--2{  
   background-image: url(../img/step_2.jpg);
@@ -159,6 +172,7 @@ header {
   background-image: url(../img/step_3.jpg);
 }
 .step__gradient{ 
+  position: relative;
   width: 300px;
   height: 240px;
   background: rgba(48,48,48,0.13);
@@ -168,7 +182,7 @@ header {
   background: -o-linear-gradient(top, rgba(48,48,48,0.13) 0%, rgba(48,48,48,0.13) 0%, rgba(13,12,13,0.7) 100%);
   background: -ms-linear-gradient(top, rgba(48,48,48,0.13) 0%, rgba(48,48,48,0.13) 0%, rgba(13,12,13,0.7) 100%);
   background: linear-gradient(to bottom, rgba(48,48,48,0.13) 0%, rgba(48,48,48,0.13) 0%, rgba(13,12,13,0.7) 100%);
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#303030', endColorstr='#0d0c0d', GradientType=0 );
+  filter:progid:DXImageTransform.Microsoft.gradient(startColorstr=#21303030,endColorstr=#B20D0C0D);
   border-radius: 5px;
 }
 .step__link {
@@ -186,12 +200,13 @@ header {
   font-size: 10px;
   letter-spacing: 1.7px;
   border-radius: 20px;
+  behavior: url(PIE/PIE.htc);
 }
 .step__title{
   margin-top: 16px;
   margin-left: 7%;
   font-size: 24px;
-  font-family: $montBold;
+  font-family: $montBold, $montBold-ie8;
   color: white;
   line-height: 28px;
 }
@@ -200,7 +215,7 @@ header {
   margin-top: 12px;
   margin-left: 7%;
   color: white;
-  font-family: $robLigt;
+  font-family: $robLigt, $robLigt-ie8;
   font-size: 14px;
   line-height: 17px;
 }
@@ -213,6 +228,7 @@ header {
   width: 120px;
   background-image: url(../img/parthner_1.jpg);
   border-radius: 50%;
+  behavior: url(PIE/PIE.htc);
 }
 .parthner__icon{
   display: block;
@@ -230,7 +246,7 @@ header {
   text-decoration: none;
   color: black;
   font-size: 14px;
-  font-family: $montBold;
+  font-family: $montBold, $montBold-ie8;
 }
 .parthner__feedback{
   width: 220px;
@@ -238,7 +254,7 @@ header {
   margin-top: 16px;
   font-size: 14px;
   line-height: 16px;
-  font-family: $robLigt;
+  font-family: $robLigt, $robLigt-ie8;
   text-align: center;
   color: #989898;
 }
@@ -271,7 +287,8 @@ header {
   margin-top: 30px;
   border: 2px solid #ff4e50;
   border-radius: 20px;
-  font-family: $montBold;
+  behavior: url(PIE/PIE.htc);
+  font-family: $montBold, $montBold-ie8;
   font-size: 14px;
   letter-spacing: -0.5px;
   text-decoration: none;
@@ -279,7 +296,7 @@ header {
   text-align: center;
   color: #ff4e50;
 }
-/*DISCOVER HOLIDAY*/
+/*DISCOVER HOLIDAY
 /*MASONRY*/
 #masonry-container {
     width: 100%;
@@ -292,6 +309,7 @@ header {
   margin: 0 auto;
   margin-top: 10px;
   border-radius: 5px;
+  behavior: url(PIE/PIE.htc);
   &:first-child {
     position: relative;
     margin-top: 14px;
@@ -301,6 +319,7 @@ header {
   width: 100%;
   height: 100%;
   border-radius: 5px;
+  behavior: url(PIE/PIE.htc);
 }
 .title--image{
   position: absolute;
@@ -314,7 +333,7 @@ header {
   margin: 0 auto;
   margin-top: 12px;
   text-align: center; 
-  font-family: $robLigt;
+  font-family: $robLigt, $robLigt-ie8;
   font-size: 18px;
 }
 .holiday__input__text{
@@ -324,9 +343,10 @@ header {
   width: 264px;
   height: 36px;
   border-radius: 5px;
+
   border: 1px solid #dcdcdc; 
   padding-left: 15px;
-  font-family: $robLigt;
+  font-family: $robLigt, $robLigt-ie8;
   font-size: 14px;
 }
 .find__link--2{
@@ -341,18 +361,18 @@ footer{
   margin-top: 18px;
   text-align: center;
   font-size: 16px;
-  font-family: $montBold;
+  font-family: $montBold, $montBold-ie8;
   color: #ff4e50;
   letter-spacing: 1px;
 }
 .menu__caption{
   margin-top: 15px;
   text-align: center;
-  font-family: $montBold;
+  font-family: $montBold, $montBold-ie8;
   font-size: 14px;
 }
 .menu{
-  width: 200px;
+  width: 220px;
   margin: 0 auto;
   margin-top: 5px;
 }
@@ -365,7 +385,7 @@ footer{
 }
 .menu__link{
   text-decoration:none;
-  font-family: $robLigt;
+  font-family: $robLigt, $robLigt-ie8;
   font-size: 14px;
   color: #989898;
   &:hover{
@@ -374,7 +394,7 @@ footer{
 }
 .designed{
   margin-top: 16px;
-  font-family: $montBold;
+  font-family: $montBold, $montBold-ie8;
   font-size: 10px;
   text-align: center;
   letter-spacing: 1px;
@@ -389,7 +409,7 @@ footer{
 }
 
 /*TABLET*/
-@media  screen and (min-width: 768px){
+@media screen and (min-width: 768px){
 header {
   height: 700px; 
 }
@@ -401,11 +421,11 @@ header {
   margin-right: 4%;
   margin-top: 18px;
 }
-.header__caption{
+h1 {
   margin-top: 48px;
   margin-left: 6%;
 }
-.header__caption__2{
+h2 {
   width: 66%;
   margin: 0 auto;
   margin-top: 148px;
@@ -413,7 +433,7 @@ header {
   line-height: 62px;
   letter-spacing: 0px;
 }
-.header__caption__3{
+h3 {
   margin-top: 28px;
   font-size: 24px;
 }
@@ -435,7 +455,6 @@ header {
     float: left;
     height: 400px;
     max-width: 235px;
-
 }
 .jcarousel__wrap{
     float: left;
@@ -623,17 +642,17 @@ header {
   margin-right: 0%;
   margin-top: 16px;
 }
-.header__caption{
+h1 {
   margin-top: 46px;
   margin-left: 2.5%;
   letter-spacing: 0;
 }
-.header__caption__2{
+h2 {
   width: 60%;
   margin-top: 137px;
   letter-spacing: -1px;
 }
-.header__caption__3{
+h3 {
   margin-top: 22px;
   letter-spacing: -0.8px;
 }
