--- a/GoIT/javascript/EXAM/src/styles/style.main.css
+++ b/GoIT/javascript/EXAM/src/styles/style.main.css
@@ -132,72 +132,28 @@ table {
 @font-face {
   font-family: 'Montserrat-Bold';
   src: url("../fonts/Montserrat-Bold.ttf") format('truetype');
+  font-weight: bold;
 }
 
 @font-face {
-  font-family: 'Montserrat-Regular';
-  src: url("../fonts/Montserrat-Regular.ttf") format('truetype');
-}
-
-@font-face {
-  font-family: 'Roboto-Black';
-  src: url("../fonts/Roboto-Black.ttf") format('truetype');
-}
-
-@font-face {
-  font-family: 'Roboto-BlackItalic';
-  src: url("../fonts/Roboto-BlackItalic.ttf") format('truetype');
-}
-
-@font-face {
-  font-family: 'Roboto-Bold';
-  src: url("../fonts/Roboto-Bold.ttf") format('truetype');
-}
-
-@font-face {
-  font-family: 'Roboto-BoldItalic';
-  src: url("../fonts/Roboto-BoldItalic.ttf") format('truetype');
-}
-
-@font-face {
-  font-family: 'Roboto-Italic';
-  src: url("../fonts/Roboto-Italic.ttf") format('truetype');
+  font-family: 'Montserrat-Bold-ie8';
+  src: url("../fonts/Montserrat-Bold.eot?#iefix") format('embedded-opentype');
+  font-weight: bold;
 }
 
 @font-face {
   font-family: 'Roboto-Light';
   src: url("../fonts/Roboto-Light.ttf") format('truetype');
+  font-weight: bold;
 }
 
 @font-face {
-  font-family: 'Roboto-LightItalic';
-  src: url("../fonts/Roboto-LightItalic.ttf") format('truetype');
+  font-family: 'Roboto-Light-ie8';
+  src: url("../fonts/Roboto-Light.eot?#iefix") format('embedded-opentype');
+  font-weight: bold;
 }
+@charset "UTF-8";
 
-@font-face {
-  font-family: 'Roboto-Medium';
-  src: url("../fonts/Roboto-Medium.ttf") format('truetype');
-}
-
-@font-face {
-  font-family: 'Roboto-MediumItalic';
-  src: url("../fonts/Roboto-MediumItalic.ttf") format('truetype');
-}
-
-@font-face {
-  font-family: 'Roboto-Regular';
-  src: url("../fonts/Roboto-Regular.ttf") format('truetype');
-}
-
-@font-face {
-  font-family: 'Roboto-Thin';
-  src: url("../fonts/Roboto-Thin.ttf") format('truetype');
-}
-
-@font-face {
-  font-family: 'Roboto-ThinItalic';
-  src: url("../fonts/Roboto-ThinItalic.ttf") format('truetype');
-}
 /*CLEARFIX*/
 
 .clearfix {
@@ -228,20 +184,25 @@ table {
 }
 
 header {
+  position: relative;
   width: 100%;
   height: 540px;
   margin: 0 auto;
-  background-position: center;
   background-image: url("../img/header_background.jpg");
+  background-position: center;
 }
 
 .header__background {
+  position: relative;
   width: 100%;
   height: 540px;
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=#33000000,endColorstr=#33000000);
+  /*ie8+*/
   background-color: rgba(0, 0, 0, 0.2);
 }
 
 .log {
+  position: relative;
   width: 190px;
   margin: 0 auto;
 }
@@ -251,7 +212,7 @@ header {
   margin-top: 20px;
   width: 75px;
   height: 32px;
-  font-family: "Montserrat-Bold";
+  font-family: "Montserrat-Bold", "Montserrat-Bold-ie8";
   text-decoration: none;
   font-size: 14px;
   color: white;
@@ -263,37 +224,46 @@ header {
   margin-left: 0.5%;
   width: 85px;
   border: 2px solid white;
+  -moz-border-radius: 20px;
+  /* Firefox */
+  -webkit-border-radius: 20px;
+  /* Safari, Chrome */
+  -khtml-border-radius: 20px;
+  /* KHTML */
   border-radius: 20px;
+  /* CSS3 */
+  behavior: url("PIE/PIE.htc");
+  /* учим IE border-radius */
 }
 
-.header__caption {
+h1 {
   width: 180px;
   margin: 0 auto;
   margin-top: 118px;
-  font-family: "Montserrat-Bold";
+  font-family: "Montserrat-Bold", "Montserrat-Bold-ie8";
   color: white;
   font-size: 20px;
   letter-spacing: 1px;
 }
 
-.header__caption__2 {
+h2 {
   margin-top: 30px;
   font-size: 28px;
   line-height: 35px;
   letter-spacing: 1.5px;
   text-align: center;
-  font-family: "Montserrat-Bold";
+  font-family: "Montserrat-Bold", "Montserrat-Bold-ie8";
   color: white;
 }
 
-.header__caption__3 {
+h3 {
   text-align: center;
   color: white;
   width: 70%;
   margin: 0 auto;
   margin-top: 10px;
   font-size: 18px;
-  font-family: "Roboto-Light";
+  font-family: "Roboto-Light", "Roboto-Light-ie8";
   line-height: 20px;
 }
 
@@ -305,21 +275,29 @@ header {
   margin-top: 18px;
   text-align: center;
   line-height: 40px;
-  background-color: #ff4e50;
   text-decoration: none;
   color: white;
-  font-family: "Montserrat-Bold";
+  font-family: "Montserrat-Bold", "Montserrat-Bold-ie8";
   font-size: 13px;
+  -moz-border-radius: 20px;
+  /* Firefox */
+  -webkit-border-radius: 20px;
+  /* Safari, Chrome */
+  -khtml-border-radius: 20px;
+  /* KHTML */
   border-radius: 20px;
+  /* CSS3 */
+  behavior: url("PIE/PIE.htc");
+  /* учим IE border-radius */
   letter-spacing: 0.5px;
-  border: none;
+  background-color: #ff4e50;
 }
 
 .title {
   width: 90%;
   margin: 0 auto;
   margin-top: 35px;
-  font-family: "Montserrat-Bold";
+  font-family: "Montserrat-Bold", "Montserrat-Bold-ie8";
   font-size: 22px;
   line-height: 26px;
   text-align: center;
@@ -365,6 +343,7 @@ header {
 }
 
 .step {
+  position: relative;
   width: 300px;
   height: 240px;
   background-image: url("../img/step_1.jpg");
@@ -381,6 +360,7 @@ header {
 }
 
 .step__gradient {
+  position: relative;
   width: 300px;
   height: 240px;
   background: rgba(48, 48, 48, 0.13);
@@ -390,7 +370,7 @@ header {
   background: -o-linear-gradient(top, rgba(48, 48, 48, 0.13) 0%, rgba(48, 48, 48, 0.13) 0%, rgba(13, 12, 13, 0.7) 100%);
   background: -ms-linear-gradient(top, rgba(48, 48, 48, 0.13) 0%, rgba(48, 48, 48, 0.13) 0%, rgba(13, 12, 13, 0.7) 100%);
   background: linear-gradient(to bottom, rgba(48, 48, 48, 0.13) 0%, rgba(48, 48, 48, 0.13) 0%, rgba(13, 12, 13, 0.7) 100%);
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#303030', endColorstr='#0d0c0d', GradientType=0 );
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=#21303030,endColorstr=#B20D0C0D);
   border-radius: 5px;
 }
 
@@ -409,13 +389,14 @@ header {
   font-size: 10px;
   letter-spacing: 1.7px;
   border-radius: 20px;
+  behavior: url("PIE/PIE.htc");
 }
 
 .step__title {
   margin-top: 16px;
   margin-left: 7%;
   font-size: 24px;
-  font-family: "Montserrat-Bold";
+  font-family: "Montserrat-Bold", "Montserrat-Bold-ie8";
   color: white;
   line-height: 28px;
 }
@@ -425,7 +406,7 @@ header {
   margin-top: 12px;
   margin-left: 7%;
   color: white;
-  font-family: "Roboto-Light";
+  font-family: "Roboto-Light", "Roboto-Light-ie8";
   font-size: 14px;
   line-height: 17px;
 }
@@ -440,6 +421,7 @@ header {
   width: 120px;
   background-image: url("../img/parthner_1.jpg");
   border-radius: 50%;
+  behavior: url("PIE/PIE.htc");
 }
 
 .parthner__icon {
@@ -459,7 +441,7 @@ header {
   text-decoration: none;
   color: black;
   font-size: 14px;
-  font-family: "Montserrat-Bold";
+  font-family: "Montserrat-Bold", "Montserrat-Bold-ie8";
 }
 
 .parthner__feedback {
@@ -468,7 +450,7 @@ header {
   margin-top: 16px;
   font-size: 14px;
   line-height: 16px;
-  font-family: "Roboto-Light";
+  font-family: "Roboto-Light", "Roboto-Light-ie8";
   text-align: center;
   color: #989898;
 }
@@ -509,7 +491,8 @@ header {
   margin-top: 30px;
   border: 2px solid #ff4e50;
   border-radius: 20px;
-  font-family: "Montserrat-Bold";
+  behavior: url("PIE/PIE.htc");
+  font-family: "Montserrat-Bold", "Montserrat-Bold-ie8";
   font-size: 14px;
   letter-spacing: -0.5px;
   text-decoration: none;
@@ -518,8 +501,7 @@ header {
   color: #ff4e50;
 }
 
-/*DISCOVER HOLIDAY*/
-
+/*DISCOVER HOLIDAY
 /*MASONRY*/
 
 #masonry-container {
@@ -534,6 +516,7 @@ header {
   margin: 0 auto;
   margin-top: 10px;
   border-radius: 5px;
+  behavior: url("PIE/PIE.htc");
 }
 
 .masonry__item:first-child {
@@ -545,6 +528,7 @@ header {
   width: 100%;
   height: 100%;
   border-radius: 5px;
+  behavior: url("PIE/PIE.htc");
 }
 
 .title--image {
@@ -560,7 +544,7 @@ header {
   margin: 0 auto;
   margin-top: 12px;
   text-align: center;
-  font-family: "Roboto-Light";
+  font-family: "Roboto-Light", "Roboto-Light-ie8";
   font-size: 18px;
 }
 
@@ -573,7 +557,7 @@ header {
   border-radius: 5px;
   border: 1px solid #dcdcdc;
   padding-left: 15px;
-  font-family: "Roboto-Light";
+  font-family: "Roboto-Light", "Roboto-Light-ie8";
   font-size: 14px;
 }
 
@@ -592,7 +576,7 @@ footer {
   margin-top: 18px;
   text-align: center;
   font-size: 16px;
-  font-family: "Montserrat-Bold";
+  font-family: "Montserrat-Bold", "Montserrat-Bold-ie8";
   color: #ff4e50;
   letter-spacing: 1px;
 }
@@ -600,12 +584,12 @@ footer {
 .menu__caption {
   margin-top: 15px;
   text-align: center;
-  font-family: "Montserrat-Bold";
+  font-family: "Montserrat-Bold", "Montserrat-Bold-ie8";
   font-size: 14px;
 }
 
 .menu {
-  width: 200px;
+  width: 220px;
   margin: 0 auto;
   margin-top: 5px;
 }
@@ -621,7 +605,7 @@ footer {
 
 .menu__link {
   text-decoration: none;
-  font-family: "Roboto-Light";
+  font-family: "Roboto-Light", "Roboto-Light-ie8";
   font-size: 14px;
   color: #989898;
 }
@@ -632,7 +616,7 @@ footer {
 
 .designed {
   margin-top: 16px;
-  font-family: "Montserrat-Bold";
+  font-family: "Montserrat-Bold", "Montserrat-Bold-ie8";
   font-size: 10px;
   text-align: center;
   letter-spacing: 1px;
@@ -664,12 +648,12 @@ footer {
     margin-top: 18px;
   }
 
-  .header__caption {
+  h1 {
     margin-top: 48px;
     margin-left: 6%;
   }
 
-  .header__caption__2 {
+  h2 {
     width: 66%;
     margin: 0 auto;
     margin-top: 148px;
@@ -678,7 +662,7 @@ footer {
     letter-spacing: 0px;
   }
 
-  .header__caption__3 {
+  h3 {
     margin-top: 28px;
     font-size: 24px;
   }
@@ -936,19 +920,19 @@ footer {
     margin-top: 16px;
   }
 
-  .header__caption {
+  h1 {
     margin-top: 46px;
     margin-left: 2.5%;
     letter-spacing: 0;
   }
 
-  .header__caption__2 {
+  h2 {
     width: 60%;
     margin-top: 137px;
     letter-spacing: -1px;
   }
 
-  .header__caption__3 {
+  h3 {
     margin-top: 22px;
     letter-spacing: -0.8px;
   }
