--- a/GoIT/test/EXAM/src/styles/style.main.css
+++ b/GoIT/test/EXAM/src/styles/style.main.css
@@ -132,25 +132,34 @@ table {
 @font-face {
   font-family: 'Montserrat-Bold';
   src: url("../fonts/Montserrat-Bold.ttf") format('truetype');
-  font-weight: bold;
 }
 
 @font-face {
   font-family: 'Montserrat-Bold-ie8';
+  src: url("../fonts/Montserrat-Bold.eot");
   src: url("../fonts/Montserrat-Bold.eot?#iefix") format('embedded-opentype');
-  font-weight: bold;
+}
+
+@font-face {
+  font-family: 'Montserrat-Regular';
+  src: url("../fonts/Montserrat-Regular.ttf") format('truetype');
+}
+
+@font-face {
+  font-family: 'Montserrat-Regular-ie8';
+  src: url("../fonts/Montserrat-Regular.eot");
+  src: url("../fonts/Montserrat-Regular.eot?#iefix") format('embedded-opentype');
 }
 
 @font-face {
   font-family: 'Roboto-Light';
   src: url("../fonts/Roboto-Light.ttf") format('truetype');
-  font-weight: bold;
 }
 
 @font-face {
   font-family: 'Roboto-Light-ie8';
+  src: url("../fonts/Roboto-Light.eot");
   src: url("../fonts/Roboto-Light.eot?#iefix") format('embedded-opentype');
-  font-weight: bold;
 }
 @charset "UTF-8";
 
@@ -212,7 +221,7 @@ header {
   margin-top: 20px;
   width: 75px;
   height: 32px;
-  font-family: "Montserrat-Bold", "Montserrat-Bold-ie8";
+  font-family: "Montserrat-Bold-ie8", "Montserrat-Bold";
   text-decoration: none;
   font-size: 14px;
   color: white;
@@ -240,7 +249,7 @@ h1 {
   width: 180px;
   margin: 0 auto;
   margin-top: 118px;
-  font-family: "Montserrat-Bold", "Montserrat-Bold-ie8";
+  font-family: "Montserrat-Bold-ie8", "Montserrat-Bold";
   color: white;
   font-size: 20px;
   letter-spacing: 1px;
@@ -252,7 +261,7 @@ h2 {
   line-height: 35px;
   letter-spacing: 1.5px;
   text-align: center;
-  font-family: "Montserrat-Bold", "Montserrat-Bold-ie8";
+  font-family: "Montserrat-Bold-ie8", "Montserrat-Bold";
   color: white;
 }
 
@@ -263,7 +272,7 @@ h3 {
   margin: 0 auto;
   margin-top: 10px;
   font-size: 18px;
-  font-family: "Roboto-Light", "Roboto-Light-ie8";
+  font-family: "Roboto-Light-ie8", "Roboto-Light";
   line-height: 20px;
 }
 
@@ -277,7 +286,7 @@ h3 {
   line-height: 40px;
   text-decoration: none;
   color: white;
-  font-family: "Montserrat-Bold", "Montserrat-Bold-ie8";
+  font-family: "Montserrat-Bold-ie8", "Montserrat-Bold";
   font-size: 13px;
   -moz-border-radius: 20px;
   /* Firefox */
@@ -297,7 +306,7 @@ h3 {
   width: 90%;
   margin: 0 auto;
   margin-top: 35px;
-  font-family: "Montserrat-Bold", "Montserrat-Bold-ie8";
+  font-family: "Montserrat-Bold-ie8", "Montserrat-Bold";
   font-size: 22px;
   line-height: 26px;
   text-align: center;
@@ -384,7 +393,7 @@ h3 {
   background-color: #ff4e50;
   color: white;
   text-align: center;
-  font-family: 'Montserrat-Regular';
+  font-family: "Montserrat-Regular-ie8", "Montserrat-Regular";
   line-height: 22px;
   font-size: 10px;
   letter-spacing: 1.7px;
@@ -396,7 +405,7 @@ h3 {
   margin-top: 16px;
   margin-left: 7%;
   font-size: 24px;
-  font-family: "Montserrat-Bold", "Montserrat-Bold-ie8";
+  font-family: "Montserrat-Bold-ie8", "Montserrat-Bold";
   color: white;
   line-height: 28px;
 }
@@ -406,7 +415,7 @@ h3 {
   margin-top: 12px;
   margin-left: 7%;
   color: white;
-  font-family: "Roboto-Light", "Roboto-Light-ie8";
+  font-family: "Roboto-Light-ie8", "Roboto-Light";
   font-size: 14px;
   line-height: 17px;
 }
@@ -441,7 +450,7 @@ h3 {
   text-decoration: none;
   color: black;
   font-size: 14px;
-  font-family: "Montserrat-Bold", "Montserrat-Bold-ie8";
+  font-family: "Montserrat-Bold-ie8", "Montserrat-Bold";
 }
 
 .parthner__feedback {
@@ -450,7 +459,7 @@ h3 {
   margin-top: 16px;
   font-size: 14px;
   line-height: 16px;
-  font-family: "Roboto-Light", "Roboto-Light-ie8";
+  font-family: "Roboto-Light-ie8", "Roboto-Light";
   text-align: center;
   color: #989898;
 }
@@ -492,7 +501,7 @@ h3 {
   border: 2px solid #ff4e50;
   border-radius: 20px;
   behavior: url("PIE/PIE.htc");
-  font-family: "Montserrat-Bold", "Montserrat-Bold-ie8";
+  font-family: "Montserrat-Bold-ie8", "Montserrat-Bold";
   font-size: 14px;
   letter-spacing: -0.5px;
   text-decoration: none;
@@ -544,7 +553,7 @@ h3 {
   margin: 0 auto;
   margin-top: 12px;
   text-align: center;
-  font-family: "Roboto-Light", "Roboto-Light-ie8";
+  font-family: "Roboto-Light-ie8", "Roboto-Light";
   font-size: 18px;
 }
 
@@ -557,7 +566,7 @@ h3 {
   border-radius: 5px;
   border: 1px solid #dcdcdc;
   padding-left: 15px;
-  font-family: "Roboto-Light", "Roboto-Light-ie8";
+  font-family: "Roboto-Light-ie8", "Roboto-Light";
   font-size: 14px;
 }
 
@@ -576,7 +585,7 @@ footer {
   margin-top: 18px;
   text-align: center;
   font-size: 16px;
-  font-family: "Montserrat-Bold", "Montserrat-Bold-ie8";
+  font-family: "Montserrat-Bold-ie8", "Montserrat-Bold";
   color: #ff4e50;
   letter-spacing: 1px;
 }
@@ -584,7 +593,7 @@ footer {
 .menu__caption {
   margin-top: 15px;
   text-align: center;
-  font-family: "Montserrat-Bold", "Montserrat-Bold-ie8";
+  font-family: "Montserrat-Bold-ie8", "Montserrat-Bold";
   font-size: 14px;
 }
 
@@ -605,7 +614,7 @@ footer {
 
 .menu__link {
   text-decoration: none;
-  font-family: "Roboto-Light", "Roboto-Light-ie8";
+  font-family: "Roboto-Light-ie8", "Roboto-Light";
   font-size: 14px;
   color: #989898;
 }
@@ -616,7 +625,7 @@ footer {
 
 .designed {
   margin-top: 16px;
-  font-family: "Montserrat-Bold", "Montserrat-Bold-ie8";
+  font-family: "Montserrat-Bold-ie8", "Montserrat-Bold";
   font-size: 10px;
   text-align: center;
   letter-spacing: 1px;
