--- a/GoIT/test/EXAM/src/styles/partials/style.scss
+++ b/GoIT/test/EXAM/src/styles/partials/style.scss
@@ -1,9 +1,6 @@
 $montBold:     'Montserrat-Bold';
 $robLigt:      'Roboto-Light';
 $montReg:      'Montserrat-Regular';
-$montBold_ie8: 'Montserrat-Bold-ie8';
-$robLigt_ie8:  'Roboto-Light-ie8';
-$montReg_ie8:  'Montserrat-Regular-ie8';
 
 /*CLEARFIX*/
 .clearfix{
@@ -53,7 +50,7 @@ header {
   margin-top: 20px;
   width: 75px;
   height: 32px;
-  font-family: $montBold_ie8, $montBold;
+  font-family: $montBold;
   text-decoration: none;
   font-size: 14px;
   color: white;
@@ -75,7 +72,7 @@ h1 {
   width: 180px;
   margin: 0 auto;
   margin-top: 118px;
-  font-family: $montBold_ie8, $montBold;
+  font-family: $montBold;
   color: white;
   font-size: 20px;
   letter-spacing: 1px;
@@ -86,7 +83,7 @@ h2 {
   line-height: 35px;
   letter-spacing: 1.5px;
   text-align: center;
-  font-family: $montBold_ie8, $montBold;
+  font-family: $montBold;
   color: white;
 }
 h3 {
@@ -96,7 +93,7 @@ h3 {
   margin: 0 auto;
   margin-top: 10px;
   font-size: 18px;
-  font-family: $robLigt_ie8, $robLigt;  
+  font-family: $robLigt;  
   line-height: 20px;
 }
 .find__link{
@@ -109,7 +106,7 @@ h3 {
   line-height: 40px;
   text-decoration: none;
   color: white;
-  font-family: $montBold_ie8, $montBold;
+  font-family: $montBold;
   font-size: 13px;
   -moz-border-radius: 20px; /* Firefox */
   -webkit-border-radius: 20px; /* Safari, Chrome */
@@ -123,7 +120,7 @@ h3 {
   width: 90%;
   margin: 0 auto;
   margin-top: 35px;
-  font-family: $montBold_ie8, $montBold;
+  font-family: $montBold;
   font-size: 22px;
   line-height: 26px;
   text-align: center;
@@ -197,7 +194,7 @@ h3 {
   background-color: #ff4e50;
   color: white;
   text-align: center;
-  font-family: $montReg_ie8, $montReg;
+  font-family: $montReg;
   line-height: 22px;
   font-size: 10px;
   letter-spacing: 1.7px;
@@ -208,7 +205,7 @@ h3 {
   margin-top: 16px;
   margin-left: 7%;
   font-size: 24px;
-  font-family: $montBold_ie8, $montBold;
+  font-family: $montBold;
   color: white;
   line-height: 28px;
 }
@@ -217,7 +214,7 @@ h3 {
   margin-top: 12px;
   margin-left: 7%;
   color: white;
-  font-family: $robLigt_ie8, $robLigt;
+  font-family: $robLigt;
   font-size: 14px;
   line-height: 17px;
 }
@@ -248,7 +245,7 @@ h3 {
   text-decoration: none;
   color: black;
   font-size: 14px;
-  font-family: $montBold_ie8, $montBold;
+  font-family: $montBold;
 }
 .parthner__feedback{
   width: 220px;
@@ -256,7 +253,7 @@ h3 {
   margin-top: 16px;
   font-size: 14px;
   line-height: 16px;
-  font-family: $robLigt_ie8, $robLigt;
+  font-family: $robLigt;
   text-align: center;
   color: #989898;
 }
@@ -290,7 +287,7 @@ h3 {
   border: 2px solid #ff4e50;
   border-radius: 20px;
   behavior: url(PIE/PIE.htc);
-  font-family: $montBold_ie8, $montBold;
+  font-family: $montBold;
   font-size: 14px;
   letter-spacing: -0.5px;
   text-decoration: none;
@@ -335,7 +332,7 @@ h3 {
   margin: 0 auto;
   margin-top: 12px;
   text-align: center; 
-  font-family: $robLigt_ie8, $robLigt;
+  font-family: $robLigt;
   font-size: 18px;
 }
 .holiday__input__text{
@@ -348,7 +345,7 @@ h3 {
 
   border: 1px solid #dcdcdc; 
   padding-left: 15px;
-  font-family: $robLigt_ie8, $robLigt;
+  font-family: $robLigt;
   font-size: 14px;
 }
 .find__link--2{
@@ -363,14 +360,14 @@ footer{
   margin-top: 18px;
   text-align: center;
   font-size: 16px;
-  font-family: $montBold_ie8, $montBold;
+  font-family: $montBold;
   color: #ff4e50;
   letter-spacing: 1px;
 }
 .menu__caption{
   margin-top: 15px;
   text-align: center;
-  font-family: $montBold_ie8, $montBold;
+  font-family: $montBold;
   font-size: 14px;
 }
 .menu{
@@ -387,7 +384,7 @@ footer{
 }
 .menu__link{
   text-decoration:none;
-  font-family: $robLigt_ie8, $robLigt;
+  font-family: $robLigt;
   font-size: 14px;
   color: #989898;
   &:hover{
@@ -396,7 +393,7 @@ footer{
 }
 .designed{
   margin-top: 16px;
-  font-family: $montBold_ie8, $montBold;
+  font-family: $montBold;
   font-size: 10px;
   text-align: center;
   letter-spacing: 1px;
