--- a/GoIT/test/EXAM/src/styles/partials/font.css
+++ b/GoIT/test/EXAM/src/styles/partials/font.css
@@ -1,4 +1,4 @@
-@font-face {
+/*@font-face {
     font-family: 'Montserrat-Bold';
     src: url('../fonts/Montserrat-Bold.eot'); 
     src: url('../fonts/Montserrat-Bold.eot?#iefix') format('embedded-opentype'),
@@ -18,3 +18,4 @@
     src: url('../fonts/Roboto-Light.eot?#iefix') format('embedded-opentype'),
          url('../fonts/Roboto-Light.ttf') format('truetype');
 }
+*/
