--- a/GoIT/test/EXAM/src/styles/partials/style.css
+++ b/GoIT/test/EXAM/src/styles/partials/style.css
@@ -45,7 +45,7 @@ header {
   margin-top: 20px;
   width: 75px;
   height: 32px;
-  font-family: "Montserrat-Bold";
+  font-family: "Montserrat";
   text-decoration: none;
   font-size: 14px;
   color: white;
@@ -71,7 +71,7 @@ h1 {
   width: 180px;
   margin: 0 auto;
   margin-top: 118px;
-  font-family: "Montserrat-Bold";
+  font-family: "Montserrat";
   color: white;
   font-size: 20px;
   letter-spacing: 1px; }
@@ -82,7 +82,7 @@ h2 {
   line-height: 35px;
   letter-spacing: 1.5px;
   text-align: center;
-  font-family: "Montserrat-Bold";
+  font-family: "Montserrat";
   color: white; }
 
 h3 {
@@ -105,7 +105,7 @@ h3 {
   line-height: 40px;
   text-decoration: none;
   color: white;
-  font-family: "Montserrat-Bold";
+  font-family: "Montserrat";
   font-size: 13px;
   -moz-border-radius: 20px;
   /* Firefox */
@@ -124,7 +124,7 @@ h3 {
   width: 90%;
   margin: 0 auto;
   margin-top: 35px;
-  font-family: "Montserrat-Bold";
+  font-family: "Montserrat";
   font-size: 22px;
   line-height: 26px;
   text-align: center;
@@ -209,7 +209,7 @@ h3 {
   margin-top: 16px;
   margin-left: 7%;
   font-size: 24px;
-  font-family: "Montserrat-Bold";
+  font-family: "Montserrat";
   color: white;
   line-height: 28px; }
 
@@ -249,7 +249,7 @@ h3 {
   text-decoration: none;
   color: black;
   font-size: 14px;
-  font-family: "Montserrat-Bold"; }
+  font-family: "Montserrat"; }
 
 .parthner__feedback {
   width: 220px;
@@ -292,7 +292,7 @@ h3 {
   border: 2px solid #ff4e50;
   border-radius: 20px;
   behavior: url(PIE/PIE.htc);
-  font-family: "Montserrat-Bold";
+  font-family: "Montserrat";
   font-size: 14px;
   letter-spacing: -0.5px;
   text-decoration: none;
@@ -363,14 +363,14 @@ footer {
   margin-top: 18px;
   text-align: center;
   font-size: 16px;
-  font-family: "Montserrat-Bold";
+  font-family: "Montserrat";
   color: #ff4e50;
   letter-spacing: 1px; }
 
 .menu__caption {
   margin-top: 15px;
   text-align: center;
-  font-family: "Montserrat-Bold";
+  font-family: "Montserrat";
   font-size: 14px; }
 
 .menu {
@@ -394,7 +394,7 @@ footer {
 
 .designed {
   margin-top: 16px;
-  font-family: "Montserrat-Bold";
+  font-family: "Montserrat";
   font-size: 10px;
   text-align: center;
   letter-spacing: 1px;
