--- a/GoIT/test/EXAM/src/styles/partials/style.scss
+++ b/GoIT/test/EXAM/src/styles/partials/style.scss
@@ -1,6 +1,7 @@
 $montBold:     'Montserrat-Bold';
 $robLigt:      'Roboto-Light';
 $montReg:      'Montserrat-Regular';
+$montGoogle:   'Montserrat';
 
 /*CLEARFIX*/
 .clearfix{
@@ -50,7 +51,7 @@ header {
   margin-top: 20px;
   width: 75px;
   height: 32px;
-  font-family: $montBold;
+  font-family: $montGoogle;
   text-decoration: none;
   font-size: 14px;
   color: white;
@@ -72,7 +73,7 @@ h1 {
   width: 180px;
   margin: 0 auto;
   margin-top: 118px;
-  font-family: $montBold;
+  font-family: $montGoogle;
   color: white;
   font-size: 20px;
   letter-spacing: 1px;
@@ -83,7 +84,7 @@ h2 {
   line-height: 35px;
   letter-spacing: 1.5px;
   text-align: center;
-  font-family: $montBold;
+  font-family: $montGoogle;
   color: white;
 }
 h3 {
@@ -106,7 +107,7 @@ h3 {
   line-height: 40px;
   text-decoration: none;
   color: white;
-  font-family: $montBold;
+  font-family: $montGoogle;
   font-size: 13px;
   -moz-border-radius: 20px; /* Firefox */
   -webkit-border-radius: 20px; /* Safari, Chrome */
@@ -120,7 +121,7 @@ h3 {
   width: 90%;
   margin: 0 auto;
   margin-top: 35px;
-  font-family: $montBold;
+  font-family: $montGoogle;
   font-size: 22px;
   line-height: 26px;
   text-align: center;
@@ -205,7 +206,7 @@ h3 {
   margin-top: 16px;
   margin-left: 7%;
   font-size: 24px;
-  font-family: $montBold;
+  font-family: $montGoogle;
   color: white;
   line-height: 28px;
 }
@@ -245,7 +246,7 @@ h3 {
   text-decoration: none;
   color: black;
   font-size: 14px;
-  font-family: $montBold;
+  font-family: $montGoogle;
 }
 .parthner__feedback{
   width: 220px;
@@ -287,7 +288,7 @@ h3 {
   border: 2px solid #ff4e50;
   border-radius: 20px;
   behavior: url(PIE/PIE.htc);
-  font-family: $montBold;
+  font-family: $montGoogle;
   font-size: 14px;
   letter-spacing: -0.5px;
   text-decoration: none;
@@ -360,14 +361,14 @@ footer{
   margin-top: 18px;
   text-align: center;
   font-size: 16px;
-  font-family: $montBold;
+  font-family: $montGoogle;
   color: #ff4e50;
   letter-spacing: 1px;
 }
 .menu__caption{
   margin-top: 15px;
   text-align: center;
-  font-family: $montBold;
+  font-family: $montGoogle;
   font-size: 14px;
 }
 .menu{
@@ -393,7 +394,7 @@ footer{
 }
 .designed{
   margin-top: 16px;
-  font-family: $montBold;
+  font-family: $montGoogle;
   font-size: 10px;
   text-align: center;
   letter-spacing: 1px;
