--- a/GoIT/test/EXAM/src/styles/style.main.css
+++ b/GoIT/test/EXAM/src/styles/style.main.css
@@ -129,26 +129,27 @@ table {
   border-collapse: collapse;
   border-spacing: 0;
 }
-@font-face {
-  font-family: 'Montserrat-Bold';
-  src: url("../fonts/Montserrat-Bold.eot");
-  src: url("../fonts/Montserrat-Bold.eot?#iefix") format('embedded-opentype'),
-         url("../fonts/Montserrat-Bold.ttf") format('truetype');
+/*@font-face {
+    font-family: 'Montserrat-Bold';
+    src: url('../fonts/Montserrat-Bold.eot'); 
+    src: url('../fonts/Montserrat-Bold.eot?#iefix') format('embedded-opentype'),
+         url('../fonts/Montserrat-Bold.ttf') format('truetype');
 }
 
 @font-face {
-  font-family: 'Montserrat-Regular';
-  src: url("../fonts/Montserrat-Regular.eot");
-  src: url("../fonts/Montserrat-Regular.eot?#iefix") format('embedded-opentype'),
-         url("../fonts/Montserrat-Regular.ttf") format('truetype');
+    font-family: 'Montserrat-Regular';
+    src: url('../fonts/Montserrat-Regular.eot'); 
+    src: url('../fonts/Montserrat-Regular.eot?#iefix') format('embedded-opentype'),
+         url('../fonts/Montserrat-Regular.ttf') format('truetype');
 }
 
 @font-face {
-  font-family: 'Roboto-Light';
-  src: url("../fonts/Roboto-Light.eot");
-  src: url("../fonts/Roboto-Light.eot?#iefix") format('embedded-opentype'),
-         url("../fonts/Roboto-Light.ttf") format('truetype');
+    font-family: 'Roboto-Light';
+    src: url('../fonts/Roboto-Light.eot'); 
+    src: url('../fonts/Roboto-Light.eot?#iefix') format('embedded-opentype'),
+         url('../fonts/Roboto-Light.ttf') format('truetype');
 }
+*/
 @charset "UTF-8";
 
 /*CLEARFIX*/
@@ -209,7 +210,7 @@ header {
   margin-top: 20px;
   width: 75px;
   height: 32px;
-  font-family: "Montserrat-Bold";
+  font-family: "Montserrat";
   text-decoration: none;
   font-size: 14px;
   color: white;
@@ -237,7 +238,7 @@ h1 {
   width: 180px;
   margin: 0 auto;
   margin-top: 118px;
-  font-family: "Montserrat-Bold";
+  font-family: "Montserrat";
   color: white;
   font-size: 20px;
   letter-spacing: 1px;
@@ -249,7 +250,7 @@ h2 {
   line-height: 35px;
   letter-spacing: 1.5px;
   text-align: center;
-  font-family: "Montserrat-Bold";
+  font-family: "Montserrat";
   color: white;
 }
 
@@ -274,7 +275,7 @@ h3 {
   line-height: 40px;
   text-decoration: none;
   color: white;
-  font-family: "Montserrat-Bold";
+  font-family: "Montserrat";
   font-size: 13px;
   -moz-border-radius: 20px;
   /* Firefox */
@@ -294,7 +295,7 @@ h3 {
   width: 90%;
   margin: 0 auto;
   margin-top: 35px;
-  font-family: "Montserrat-Bold";
+  font-family: "Montserrat";
   font-size: 22px;
   line-height: 26px;
   text-align: center;
@@ -393,7 +394,7 @@ h3 {
   margin-top: 16px;
   margin-left: 7%;
   font-size: 24px;
-  font-family: "Montserrat-Bold";
+  font-family: "Montserrat";
   color: white;
   line-height: 28px;
 }
@@ -438,7 +439,7 @@ h3 {
   text-decoration: none;
   color: black;
   font-size: 14px;
-  font-family: "Montserrat-Bold";
+  font-family: "Montserrat";
 }
 
 .parthner__feedback {
@@ -489,7 +490,7 @@ h3 {
   border: 2px solid #ff4e50;
   border-radius: 20px;
   behavior: url("PIE/PIE.htc");
-  font-family: "Montserrat-Bold";
+  font-family: "Montserrat";
   font-size: 14px;
   letter-spacing: -0.5px;
   text-decoration: none;
@@ -573,7 +574,7 @@ footer {
   margin-top: 18px;
   text-align: center;
   font-size: 16px;
-  font-family: "Montserrat-Bold";
+  font-family: "Montserrat";
   color: #ff4e50;
   letter-spacing: 1px;
 }
@@ -581,7 +582,7 @@ footer {
 .menu__caption {
   margin-top: 15px;
   text-align: center;
-  font-family: "Montserrat-Bold";
+  font-family: "Montserrat";
   font-size: 14px;
 }
 
@@ -613,7 +614,7 @@ footer {
 
 .designed {
   margin-top: 16px;
-  font-family: "Montserrat-Bold";
+  font-family: "Montserrat";
   font-size: 10px;
   text-align: center;
   letter-spacing: 1px;
