fixed fonts in ie8

--- a/GoIT/javascript/EXAM/src/styles/partials/style.css
+++ b/GoIT/javascript/EXAM/src/styles/partials/style.css
@@ -45,7 +45,7 @@ header {
   margin-top: 20px;
   width: 75px;
   height: 32px;
-  font-family: "Montserrat-Bold-ie8", "Montserrat-Bold";
+  font-family: "Montserrat", "Montserrat-Bold";
   text-decoration: none;
   font-size: 14px;
   color: white;
@@ -71,7 +71,7 @@ h1 {
   width: 180px;
   margin: 0 auto;
   margin-top: 118px;
-  font-family: "Montserrat-Bold-ie8", "Montserrat-Bold";
+  font-family: "Montserrat", "Montserrat-Bold";
   color: white;
   font-size: 20px;
   letter-spacing: 1px; }
@@ -82,7 +82,7 @@ h2 {
   line-height: 35px;
   letter-spacing: 1.5px;
   text-align: center;
-  font-family: "Montserrat-Bold-ie8", "Montserrat-Bold";
+  font-family: "Montserrat", "Montserrat-Bold";
   color: white; }
 
 h3 {
@@ -92,7 +92,7 @@ h3 {
   margin: 0 auto;
   margin-top: 10px;
   font-size: 18px;
-  font-family: "Roboto-Light-ie8", "Roboto-Light";
+  font-family: "Roboto", "Roboto-Light";
   line-height: 20px; }
 
 .find__link {
@@ -105,7 +105,7 @@ h3 {
   line-height: 40px;
   text-decoration: none;
   color: white;
-  font-family: "Montserrat-Bold-ie8", "Montserrat-Bold";
+  font-family: "Montserrat", "Montserrat-Bold";
   font-size: 13px;
   -moz-border-radius: 20px;
   /* Firefox */
@@ -124,7 +124,7 @@ h3 {
   width: 90%;
   margin: 0 auto;
   margin-top: 35px;
-  font-family: "Montserrat-Bold-ie8", "Montserrat-Bold";
+  font-family: "Montserrat", "Montserrat-Bold";
   font-size: 22px;
   line-height: 26px;
   text-align: center;
@@ -198,9 +198,10 @@ h3 {
   background-color: #ff4e50;
   color: white;
   text-align: center;
-  font-family: "Montserrat-Regular-ie8", "Montserrat-Regular";
-  line-height: 22px;
+  font-family: "Montserrat", "Montserrat-Bold";
+  font-weight: 400;
   font-size: 10px;
+  line-height: 22px;
   letter-spacing: 1.7px;
   border-radius: 20px;
   behavior: url(PIE/PIE.htc); }
@@ -209,7 +210,7 @@ h3 {
   margin-top: 16px;
   margin-left: 7%;
   font-size: 24px;
-  font-family: "Montserrat-Bold-ie8", "Montserrat-Bold";
+  font-family: "Montserrat", "Montserrat-Bold";
   color: white;
   line-height: 28px; }
 
@@ -218,7 +219,7 @@ h3 {
   margin-top: 12px;
   margin-left: 7%;
   color: white;
-  font-family: "Roboto-Light-ie8", "Roboto-Light";
+  font-family: "Roboto", "Roboto-Light";
   font-size: 14px;
   line-height: 17px; }
 
@@ -249,7 +250,7 @@ h3 {
   text-decoration: none;
   color: black;
   font-size: 14px;
-  font-family: "Montserrat-Bold-ie8", "Montserrat-Bold"; }
+  font-family: "Montserrat", "Montserrat-Bold"; }
 
 .parthner__feedback {
   width: 220px;
@@ -257,7 +258,7 @@ h3 {
   margin-top: 16px;
   font-size: 14px;
   line-height: 16px;
-  font-family: "Roboto-Light-ie8", "Roboto-Light";
+  font-family: "Roboto", "Roboto-Light";
   text-align: center;
   color: #989898; }
 
@@ -292,7 +293,7 @@ h3 {
   border: 2px solid #ff4e50;
   border-radius: 20px;
   behavior: url(PIE/PIE.htc);
-  font-family: "Montserrat-Bold-ie8", "Montserrat-Bold";
+  font-family: "Montserrat", "Montserrat-Bold";
   font-size: 14px;
   letter-spacing: -0.5px;
   text-decoration: none;
@@ -336,7 +337,7 @@ h3 {
   margin: 0 auto;
   margin-top: 12px;
   text-align: center;
-  font-family: "Roboto-Light-ie8", "Roboto-Light";
+  font-family: "Roboto", "Roboto-Light";
   font-size: 18px; }
 
 .holiday__input__text {
@@ -348,7 +349,7 @@ h3 {
   border-radius: 5px;
   border: 1px solid #dcdcdc;
   padding-left: 15px;
-  font-family: "Roboto-Light-ie8", "Roboto-Light";
+  font-family: "Roboto", "Roboto-Light";
   font-size: 14px; }
 
 .find__link--2 {
@@ -363,14 +364,14 @@ footer {
   margin-top: 18px;
   text-align: center;
   font-size: 16px;
-  font-family: "Montserrat-Bold-ie8", "Montserrat-Bold";
+  font-family: "Montserrat", "Montserrat-Bold";
   color: #ff4e50;
   letter-spacing: 1px; }
 
 .menu__caption {
   margin-top: 15px;
   text-align: center;
-  font-family: "Montserrat-Bold-ie8", "Montserrat-Bold";
+  font-family: "Montserrat", "Montserrat-Bold";
   font-size: 14px; }
 
 .menu {
@@ -386,7 +387,7 @@ footer {
 
 .menu__link {
   text-decoration: none;
-  font-family: "Roboto-Light-ie8", "Roboto-Light";
+  font-family: "Roboto", "Roboto-Light";
   font-size: 14px;
   color: #989898; }
   .menu__link:hover {
@@ -394,7 +395,7 @@ footer {
 
 .designed {
   margin-top: 16px;
-  font-family: "Montserrat-Bold-ie8", "Montserrat-Bold";
+  font-family: "Montserrat", "Montserrat-Bold";
   font-size: 10px;
   text-align: center;
   letter-spacing: 1px;
