--- a/GoIT/javascript/EXAM/src/styles/style.main.css
+++ b/GoIT/javascript/EXAM/src/styles/style.main.css
@@ -131,35 +131,23 @@ table {
 }
 @font-face {
   font-family: 'Montserrat-Bold';
-  src: url("../fonts/Montserrat-Bold.ttf") format('truetype');
-}
-
-@font-face {
-  font-family: 'Montserrat-Bold-ie8';
   src: url("../fonts/Montserrat-Bold.eot");
-  src: url("../fonts/Montserrat-Bold.eot?#iefix") format('embedded-opentype');
+  src: url("../fonts/Montserrat-Bold.eot?#iefix") format('embedded-opentype'),
+         url("../fonts/Montserrat-Bold.ttf") format('truetype');
 }
 
 @font-face {
   font-family: 'Montserrat-Regular';
-  src: url("../fonts/Montserrat-Regular.ttf") format('truetype');
-}
-
-@font-face {
-  font-family: 'Montserrat-Regular-ie8';
   src: url("../fonts/Montserrat-Regular.eot");
-  src: url("../fonts/Montserrat-Regular.eot?#iefix") format('embedded-opentype');
+  src: url("../fonts/Montserrat-Regular.eot?#iefix") format('embedded-opentype'),
+         url("../fonts/Montserrat-Regular.ttf") format('truetype');
 }
 
 @font-face {
   font-family: 'Roboto-Light';
-  src: url("../fonts/Roboto-Light.ttf") format('truetype');
-}
-
-@font-face {
-  font-family: 'Roboto-Light-ie8';
   src: url("../fonts/Roboto-Light.eot");
-  src: url("../fonts/Roboto-Light.eot?#iefix") format('embedded-opentype');
+  src: url("../fonts/Roboto-Light.eot?#iefix") format('embedded-opentype'),
+         url("../fonts/Roboto-Light.ttf") format('truetype');
 }
 @charset "UTF-8";
 
@@ -221,7 +209,7 @@ header {
   margin-top: 20px;
   width: 75px;
   height: 32px;
-  font-family: "Montserrat-Bold-ie8", "Montserrat-Bold";
+  font-family: "Montserrat", "Montserrat-Bold";
   text-decoration: none;
   font-size: 14px;
   color: white;
@@ -249,7 +237,7 @@ h1 {
   width: 180px;
   margin: 0 auto;
   margin-top: 118px;
-  font-family: "Montserrat-Bold-ie8", "Montserrat-Bold";
+  font-family: "Montserrat", "Montserrat-Bold";
   color: white;
   font-size: 20px;
   letter-spacing: 1px;
@@ -261,7 +249,7 @@ h2 {
   line-height: 35px;
   letter-spacing: 1.5px;
   text-align: center;
-  font-family: "Montserrat-Bold-ie8", "Montserrat-Bold";
+  font-family: "Montserrat", "Montserrat-Bold";
   color: white;
 }
 
@@ -272,7 +260,7 @@ h3 {
   margin: 0 auto;
   margin-top: 10px;
   font-size: 18px;
-  font-family: "Roboto-Light-ie8", "Roboto-Light";
+  font-family: "Roboto", "Roboto-Light";
   line-height: 20px;
 }
 
@@ -286,7 +274,7 @@ h3 {
   line-height: 40px;
   text-decoration: none;
   color: white;
-  font-family: "Montserrat-Bold-ie8", "Montserrat-Bold";
+  font-family: "Montserrat", "Montserrat-Bold";
   font-size: 13px;
   -moz-border-radius: 20px;
   /* Firefox */
@@ -306,7 +294,7 @@ h3 {
   width: 90%;
   margin: 0 auto;
   margin-top: 35px;
-  font-family: "Montserrat-Bold-ie8", "Montserrat-Bold";
+  font-family: "Montserrat", "Montserrat-Bold";
   font-size: 22px;
   line-height: 26px;
   text-align: center;
@@ -393,9 +381,10 @@ h3 {
   background-color: #ff4e50;
   color: white;
   text-align: center;
-  font-family: "Montserrat-Regular-ie8", "Montserrat-Regular";
-  line-height: 22px;
+  font-family: "Montserrat", "Montserrat-Bold";
+  font-weight: 400;
   font-size: 10px;
+  line-height: 22px;
   letter-spacing: 1.7px;
   border-radius: 20px;
   behavior: url("PIE/PIE.htc");
@@ -405,7 +394,7 @@ h3 {
   margin-top: 16px;
   margin-left: 7%;
   font-size: 24px;
-  font-family: "Montserrat-Bold-ie8", "Montserrat-Bold";
+  font-family: "Montserrat", "Montserrat-Bold";
   color: white;
   line-height: 28px;
 }
@@ -415,7 +404,7 @@ h3 {
   margin-top: 12px;
   margin-left: 7%;
   color: white;
-  font-family: "Roboto-Light-ie8", "Roboto-Light";
+  font-family: "Roboto", "Roboto-Light";
   font-size: 14px;
   line-height: 17px;
 }
@@ -450,7 +439,7 @@ h3 {
   text-decoration: none;
   color: black;
   font-size: 14px;
-  font-family: "Montserrat-Bold-ie8", "Montserrat-Bold";
+  font-family: "Montserrat", "Montserrat-Bold";
 }
 
 .parthner__feedback {
@@ -459,7 +448,7 @@ h3 {
   margin-top: 16px;
   font-size: 14px;
   line-height: 16px;
-  font-family: "Roboto-Light-ie8", "Roboto-Light";
+  font-family: "Roboto", "Roboto-Light";
   text-align: center;
   color: #989898;
 }
@@ -501,7 +490,7 @@ h3 {
   border: 2px solid #ff4e50;
   border-radius: 20px;
   behavior: url("PIE/PIE.htc");
-  font-family: "Montserrat-Bold-ie8", "Montserrat-Bold";
+  font-family: "Montserrat", "Montserrat-Bold";
   font-size: 14px;
   letter-spacing: -0.5px;
   text-decoration: none;
@@ -553,7 +542,7 @@ h3 {
   margin: 0 auto;
   margin-top: 12px;
   text-align: center;
-  font-family: "Roboto-Light-ie8", "Roboto-Light";
+  font-family: "Roboto", "Roboto-Light";
   font-size: 18px;
 }
 
@@ -566,7 +555,7 @@ h3 {
   border-radius: 5px;
   border: 1px solid #dcdcdc;
   padding-left: 15px;
-  font-family: "Roboto-Light-ie8", "Roboto-Light";
+  font-family: "Roboto", "Roboto-Light";
   font-size: 14px;
 }
 
@@ -585,7 +574,7 @@ footer {
   margin-top: 18px;
   text-align: center;
   font-size: 16px;
-  font-family: "Montserrat-Bold-ie8", "Montserrat-Bold";
+  font-family: "Montserrat", "Montserrat-Bold";
   color: #ff4e50;
   letter-spacing: 1px;
 }
@@ -593,7 +582,7 @@ footer {
 .menu__caption {
   margin-top: 15px;
   text-align: center;
-  font-family: "Montserrat-Bold-ie8", "Montserrat-Bold";
+  font-family: "Montserrat", "Montserrat-Bold";
   font-size: 14px;
 }
 
@@ -614,7 +603,7 @@ footer {
 
 .menu__link {
   text-decoration: none;
-  font-family: "Roboto-Light-ie8", "Roboto-Light";
+  font-family: "Roboto", "Roboto-Light";
   font-size: 14px;
   color: #989898;
 }
@@ -625,7 +614,7 @@ footer {
 
 .designed {
   margin-top: 16px;
-  font-family: "Montserrat-Bold-ie8", "Montserrat-Bold";
+  font-family: "Montserrat", "Montserrat-Bold";
   font-size: 10px;
   text-align: center;
   letter-spacing: 1px;
